# DIRECT-FRAMEWORK-data-analysis-streamlit-app

./: CHANGELOG.md  Dockerfile  README.md  entrypoint.sh  pyproject.toml
.github/actions/docker-build/: action.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: ci.yml  release.yml
direct_framework_data_analysis_streamlit_app/: analyse_multi_user_data.py
